--- a/action.yml
+++ b/action.yml
@@ -37,3 +37,6 @@ runs:
     - ${{ inputs.scanPath }}
     - --deployment-type
     - ${{ inputs.targetCompute }}
+    - --log
+    # based on ACTIONS_RUNNER_DEBUG, set to 2 for debug
+    - ${{ runner.os == 'Linux' && env.ACTIONS_RUNNER_DEBUG == 'true' && '2' || '3' }}
